--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -343,5 +343,138 @@
     <p>
         The plaintiff’s claim is dismissed by the court on the grounds that the 2012 agreement does not give rise to any legal rights. It highlights that content from a copyrighted work that is in the public domain is not protected by copyright claims. The court forbids the defendants from utilising the original audio and/or video recordings unless they can demonstrate fair dealing, and it grants them a two-minute break during which they may utilise content from the plaintiff’s first broadcast. The lawsuits are dropped.
     </p>
+    <p></p>
+    <h3>Muthoot Finance Limited vs Shalini Kalra & Ors on 13 September, 2021 </h3>
+    <p></p>
+    <h4>FACT:</h4>
+    <p></p>
+    <p>
+        A non-banking financial firm called Muthoot Finance Limited claimed that former workers (Defendants 1 through 4) had illegally accessed and sent private client data to a rival business (Defendant No. 5). According to the plaintiff, there was a considerable damage as a result of the revelation. During their employment, the defendants had signed non-disclosure agreements. In addition to filing criminal accusations, the plaintiff requested damages, a permanent injunction, and the recovery of private data. 
+    </p>
+    <p></p>
+    <h4>ISSUE:</h4>
+    <p></p>
+    <p>
+        1. Illicit access to and dissemination of private client data.
+    </p>
+    <p></p>
+    <p>
+        2. Former workers breaking non-disclosure agreements and betraying trust.
+    </p>
+    <p></p>
+    <p>
+        3. Alleged use of unlawfully obtained information by Defendant No. 5 to recruit workers and clients.
+    </p>
+    <p></p>
+    <p>
+        4. A claim for interest and damages.
+    </p>
+    <p></p>
+    <h4>LAW:</h4>
+    <p></p>
+    <p>
+        1.	Section 2 (o):  
+    </p>
+    <p></p>
+    <p>
+        The definition of “literary work” in this section include computer databases. The plaintiff claimed that because the customer data is a component of a database, it is protected by the Copyright Act as it constitutes a literary work.
+    </p>
+    <p></p>
+    <h4>JUDGEMENT:</h4>
+    <p></p>
+    <p>
+        The defendants were given a summons by the court to provide a written statement. The defendants were ordered to refrain from revealing or exploiting trade secrets, proprietary material, or the plaintiff's intellectual property rights, as long as an interim injunction was issued. While awaiting a more thorough review of the case, the court accepted the plaintiff’s prima facie case and worked to stop more injury. In the event of further procedures, the plaintiff’s requests for damages and a permanent injunction would probably be taken into account. 
+    </p>
+    <p></p>
+    <h3>Smt. Shumita Deb vs Saregama India Limited on 20 December, 2021 OS.No.6676/2017</h3>
+    <p></p>
+    <h4>FACT:</h4>
+    <p></p>
+    <p>
+        Manna Dey’s daughter, Smt. Shumita Deb, filed a lawsuit against Sony DADC Manufacturing Pvt. Ltd. (Defendant No. 2) and Saregama India Ltd. (Defendant No. 1), claiming that her father’s singing of 14 songs violated her father’s copyright. According to the plaintiff, Manna Dey was the owner of copyright, and the defendants had illegally made, sold, and disseminated the songs as part of a CD album. Defendant No. 1 countered that Manna Dey wrote two of the songs, gave Defendant No. 1 the rights to perform them, and was paid royalties. In addition, the producer is the owner of the copyright because four songs were used in a cinematographic picture. The CD albums were produced and disseminated by Defendant No. 2 under an exclusive licencing arrangement.
+    </p>
+    <p></p>
+    <h4>ISSUE:</h4>
+    <p></p>
+    <p>
+        1. Whether Manna Dey the owner of the copyright for the 14 songs?
+    </p>
+    <p></p>
+    <p>
+        2. The legality of the two written songs’ agreement between Defendant No. 1 and Manna Dey.
+    </p>
+    <p></p>
+    <p>
+        3. The four songs that are featured in a cinematographic film are owned by copyright.
+    </p>
+    <p></p>
+    <p>
+        4. A contract of exclusive license between Defendant No. 1 and Defendant No. 2.
+    </p>
+    <p></p>
+    <h4>LAW:</h4>
+    <p></p>
+    <p>
+        1.	Section 17: 
+    </p>
+    <p></p>
+    <p>
+        The plaintiff in this case asserted that Manna Dey was the owner of copyright to the 14 songs, raising the question of copyright ownership. According to the Act, the original creator of the work is usually the first owner of the copyright.
+    </p>
+    <p></p>
+    <p>
+        2.	Section 2 (d)(ii):  
+    </p>
+    <p></p>
+    <p>
+        Under Section 2(d)(ii) of the Copyright Act, the court deliberated whether Manna Dey, as the vocalist, might be regarded as the song’s creator. The vocalist Manna Dey was not the song's author, the court decided, notwithstanding this. The Act acknowledges that many people might be considered writers, and compositional rights were addressed in connection to Manna Dey’s two songs.
+    </p>
+    <p></p>
+    <p>
+       3.  Section 19:
+    </p>
+    <p></p>
+    <p>
+        The court recognised that two of the songs were written by Manna Dey, who granted Defendant No. 1 the rights to use them through a particular agreement. Copyright may be transferred by assignment under Section 19.
+    </p>
+    <p></p>
+    <p>
+        4.	Section 2 (f):   
+    </p>
+    <p></p>
+    <p>
+        Cinematographic films are defined under the Act, and the ownership of songs used in a cinematographic film was taken into consideration by the court. It was determined that the songs’ copyright belonged to the movie’s producer.
+    </p>
+    <p></p>
+    <p>
+        5.	Section 30: 
+    </p>
+    <p></p>
+    <p>
+        The exclusive licencing arrangement between Defendant No. 1 and Defendant No. 2, which permitted the production and distribution of the CD albums, was taken into consideration by the court. Section 30 of the Act authorises licences to be granted.
+    </p>
+    <p></p>
+    <p>
+        6.	Section 51:  
+    </p>
+    <p></p>
+    <p>
+        In response to copyright infringement, the plaintiff sought remedies under Section 51 of the Act. The allegation was rejected by the court, which emphasised that Manna Dey did not write the songs. 
+    </p>
+    <p></p>
+    <p>
+        7.	Section 57:   
+    </p>
+    <p></p>
+    <p>
+        The court dismissed the plaintiff’s Section 57 allegation of distortion. Authors are granted moral rights in this section, which enable them to assert their authorship and stop unauthorised use of their works. 
+    </p>
+    <p></p>
+    <h4>JUDGEMENT:</h4>
+    <p></p>
+    <p>
+        According to Section 2(d)(ii) of the Copyright Act, the court determined that Manna Dey, as the vocalist, was not the song’s author. It was proven that Manna Dey wrote two songs, gave Defendant No. 1 the rights to them, and got paid royalties. The producer acquired copyright for the four songs since they were included in a cinematographic picture. The court dismissed claims for damages and rejected the Section 57 charge of distortion. The defendants, who possessed the original plate from which the record was manufactured, were found to be the rightful owners of the music rights, and the lawsuit was dismissed. 
+    </p>
+    <p></p>
 </body>
 </html>
