--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -829,6 +829,59 @@
     <p>
       Once a product is exported to a market outside of India, further sales of the same product there fall under the purview of international exhaustion of rights; however, if the goods are purchased from the international market and sent back to India for the purpose of selling them here, parallel imports are not permitted.
     </p>
+    <p></p>
+    <h4>DOCTRINE OF SWEAT OF THE BROW</h4>
+    <p></p>
+    <p>
+      According to this doctrine, an author gains his right of copyright through simple diligence during the creation of a work, such as a directory or a database. Substantial creativity or originality is not required. The doctrine protects factual compilations.
+    </p>
+    <p></p>
+    <p>
+      The rationale behind this doctrine was to award the person who expended his sweat and effort in compiling the facts. No one can misuse and take a gain out of it. 
+      The principle of Sweat of the brow doctrine can also be stated in the form that one is not at liberty to avail himself of the labour which the other has been at for the purposes of producing his work that is, in fact, merely to take away the result of another man’s intellectual property. But Copyright Act protects original and creative works. And thus this doctrine is in conflict with the core principle of the Copyright Act. It has led to confusion in order to determine the boundaries of the concept of originality.
+    </p>
+    <p></p>
+    <p>
+      The main purpose of copyright law is to promote and protect creative works. The progress of science and arts is promoted by protecting the work of author.
+      In general rule, compilations of facts are copyrightable, but facts are not. In due course of time, there developed a doctrine of “Sweat of The Brow”. This doctrine made the requirement of the creativity, in works, irrelevant. It protected the labour and sweat of the compiler, without the use of his vision and aptitude. Merely mechanical and automatic task which is not having any creativity is also copyrightable.
+    </p>
+    <p></p>
+    <p>
+      The Delhi High Court in the case of Diljeet Titus & Ors v Alfred  Adebare & Ors. 2006 (32) PTC 609 (Del),dealt with this matter, related to the database protection, and held that the copyright in a database prepared by an advocate working under and in the office of another advocate by using the latter’s resources, expertise and investment, would vest in the employer advocate.
+      This High Court has further said that, in case of compilation, a person can make a similar compilation but cannot infringe upon the copyright of the previous compiler by appropriating the fruits of his labour. Protection is extended in the form of modicum of creativity in the selection, arrangement or coordination of the contents of a database to attract copyright protection.
+    </p>
+    <p></p>
+    <p>
+      A sui generis right is required to be given to the creator of database if some creativity is involved in the making of the work. This right can only be given to the creator of the database who must show that there has been qualitatively and/or quantitatively a substantial investment in either the obtaining, verification or presentation of the contents. This is purely a “sweat of the brow” protection regime.
+    </p>
+    <p></p>
+    <p>
+      In University of London Press Ltd v. University Tutorial Press Ltd, [1916] 2 Ch. 601 it was held only that the work should not be copied and must have originated from the author. It need not necessarily be novel in nature. Originality need not be seen in original or inventive thought or ideas, but in expression of such in print or writing.
+    </p>
+    <p></p>
+    <p>
+      The court in this case elaborated that the word “original” did not mean that the work must be the expression of original or inventive thought. It commented that Copyright Acts are concerned with the expression of thought in print or writing in the case of literary work, and not with the originality of ideas therein. The requirement of originality relates to the expression of the thought. However, the Acts do not require that the appearance must be in an original or novel form, but that the work must not be copied from another work; meaning only that it should originate from the author.
+    </p>
+    <p></p>
+    <P>
+      India strongly followed the doctrine of sweat of the brow for a considerably long time. In Kartar Singh Giani v. Ladha Singh, Air 1934 Lahore 777 the supreme court of India, following the approach of English courts, observed that copyright law does not prevent a person from taking what is useful from an original work with additions and improvements.
+    </P>
+    <p></p>
+    <h4>DOCTRINE OF MODICUM OF CREATIVITY</h4>
+    <p></p>
+    <p>
+      Originality is the basic yardstick used by the copyright regimes in the world to evaluate the availability copyright protection to a particular work. The word “Originality” in civil law countries consider as an author's own intellectual creation. Through originality doctrine, copyright is safeguarding the public domain so that a person cannot claim for an expression. Section 13(1) of the Indian Copyright Act 1957 states that copyright subsists in “original literary, dramatic, musical and artistic works”. However, the Act fails to give any definition or test to determine originality of a work. This leaves the court with the duty to decide the amount originality required for a work to claim copyright protection.
+    </p>
+    <p></p>
+    <p>
+      The courts have given importance to both the creative and subjective contribution of the authors since the late 17th century. In Feist Publications, Inc. v. Rural telephone Service Co. 499 U.S. 340, the US Supreme held that in order to be original a work must not only have been the product of independent creation, but it must also exhibit a “modicum of creativity”. This doctrine stipulates that originality subsists in a work where a sufficient amount of intellectual creativity and judgment has gone into the creation of that work.
+      The standard of creativity need not be high but a minimum level of creativity should be there for copyright protection. The court held that facts like names, addresses etc are not copyrightable, but compilations of facts are copyrightable. This is majorly owing to the unique way of expression by way of arrangement and if it possesses at least some minimal degree of creativity, it will be copyrightable. The Court held that Rural's directory displayed a lack of requisite standards for copyright protection as it was just a compilation of data without any minimum creativity, which was a requirement for copyright protection. Hence, Rural's case was dismissed.
+    </p>
+    <p></p>
+    <p>
+      In Eastern Book Company v. D.B. Modak, Civil Appeal No. 6472 of 2004, where the Supreme Court discarded the ‘Sweat of the Brow’ doctrine and shifted to a ‘Modicum of creativity’ approach as followed in the US. The dispute is relating to copyrightability of judgements. The notion of “minimum requirement of creativity” was introduced in this case. The Court granted copyright protection to the additions and contributions made by the editors of SCC. At the same the Court also held that the orders and judgments of the Courts are in public domain and everybody has a right to use and publish them and therefore no copyright can be claimed on the same.
+    </p>
+    <p></p>
 
 
     
