--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -882,6 +882,74 @@
       In Eastern Book Company v. D.B. Modak, Civil Appeal No. 6472 of 2004, where the Supreme Court discarded the ‘Sweat of the Brow’ doctrine and shifted to a ‘Modicum of creativity’ approach as followed in the US. The dispute is relating to copyrightability of judgements. The notion of “minimum requirement of creativity” was introduced in this case. The Court granted copyright protection to the additions and contributions made by the editors of SCC. At the same the Court also held that the orders and judgments of the Courts are in public domain and everybody has a right to use and publish them and therefore no copyright can be claimed on the same.
     </p>
     <p></p>
+    <h4>DOCTRINE OF MERGER</h4>
+    <p></p>
+    <p>
+      The fundamental rule of Copyright law is that facts and ideas are not copyrightable, it is only the creative expression of such ideas and facts that is rewarded by law, by conferring a privilege to exclusively exploit such expression for a limited time. However, not all expressions are accorded protection under the Copyright Law. The law affords protection to expressions that are fixed in a medium and are original. Section 13 of the Copyright Act provides that original, literary, artistic, dramatic and musical works are subject matter of copyright.
+    </p>
+    <p></p>
+    <p>
+      However, in situations where the idea and expression are inseparable or merged, doctrine of merger is applied by the Courts. This doctrine postulates that where the idea and expression are intrinsically connected, and that the expression is indistinguishable from the idea, copyright protection cannot be granted. Therefore, if the idea and expression are so well merged that the idea itself becomes copyrightable, it would hinder the growth of creativity which is against the very objective of copyright law.
+    </p>
+    <p></p>
+    <p>
+      The doctrine of merger provides that when the expression is the idea, and vice-versa, and there is only one way to express the underlying idea, the idea will merge with the expression as to make them indistinguishable. Consequently, the expression becomes non-copyrightable.
+    </p>
+    <p></p>
+    <p>
+      An issue arises in the instance where ideas and expression of any work intersect. This may occur when an idea can only be expressed in a singular form. One of the widely accepted objectives of the Copyright Law is that it fosters and promotes creativity in society. In the case of a convergence between idea and expression, protection of the latter would lead to an obstruction on the creative expression of such an idea.
+      Thus, courts have established that since protection of expression of these ideas would be contradictory to the inert objectives of the Copyright Law, these works shall not fall under the ambit of copyright protection. The underlying principle ensures that there is no instance of gatekeeping of the creative expression of certain ideas.
+    </p>
+    <p></p>
+    <p>
+      The Merger Doctrine is an established concept under the Common law which seeks to rectify the issue which arises in instances of convergence of the idea and expression in a work. The doctrine is considered to be executed in pursuance of the ‘idea-expression dichotomy’ to establish the limits of the Copyright Law. It is one of the fundamental rules of the Copyright Law which states that ideas cannot be protected. The Law only protects the creative expression of any idea or concept.
+      Multiple precedents such as the case of RG Anand v. Deluxe Films has established that ideas do not fall within the ambit of the Copyright Law. In the aforementioned case, the issue had arisen regarding the similarity between two movie scripts based on the same idea. But the court ruled against protection and stated that ideas are not copyrightable.
+    </p>
+    <p></p>
+    <p>
+      In Herbert Rosenthal Jewelry Corporation v. Kalpakian, 446 F.2d 738(1971), the plaintiffs sued the defendants asking them to refrain from manufacturing bee shaped jewel pins. The Court held that the jewel shaped bee pin was an idea that anyone was free to copy, the expression of which could be possible only in a few ways; therefore, no copyright could subsist in it.
+    </p>
+    <p></p>
+    <p>
+      Affiliated Hospital Products, Inc. v. Merdel Game Mfg. Co., 513 F.2d 1183, 1188-89 (2nd Cir. 1975)- In this case, Allen had not shown that it is possible to distinguish the expression of the rules of his game manuals from the idea of the rules themselves. Thus, the doctrine of merger applies and although Allen may be entitled to copyright protection for the physical form of his games, he is not afforded protection for the premises or ideas underlying those games as it would give Allen a monopoly on such commonplace ideas as a simple rule on how youngsters should play their games.
+    </p>
+    <p></p>
+    <p>
+      In Chancellor Masters of Oxford v. Narendra Publishing House IA 9823/2005, the Supreme Court of India held that mathematical questions are expressions of laws of nature. Since language is a limited medium, such laws of nature can be expressed only in a few ways. Hence, extension of copyright protection for questions would deny access to ideas that they encompass. For these reasons, the Court held that copyright could not be extended to the questions.
+      Applying this doctrine courts have refused to protect (through copyright) the expression of an idea, which can be expressed only in a very limited manner, because doing so would confer monopoly on the idea itself.
+    </p>
+    <p></p>
+    <h4>DOCTRINE OF FIXATION </h4>
+    <p></p>
+    <p>
+      It is one established principle of copyright law that copyright protection cannot be provided to a work until and unless the work is expressed in some tangible form. This requirement of expressing the idea is known as the requirement of fixation in copyright. This essentially means that the work must be embodied in a copy which allows it to be seen or copied by others. The issue of whether a work must be fixed in a tangible form in order to be protected is not dealt with in a uniform way.
+    </p>
+    <p></p>
+    <p>
+      Common law countries require fixation while civil law countries do not. The TRIPS Agreement does not require that copyrightable works be fixed in some way. Instead, the incorporated Berne Convention allows each signatory to determine whether it will require fixation “in some material form.
+    </p>
+    <p></p>
+    <p>
+      International law allows for both ways. If fixation is required, those works would not be protected until they are either recorded or transcribed. By contrast, in a country without fixation requirements, copyright protection takes effect from the very moment the work is created. Mandatory registration has been abolished in most of the countries and many national laws allow for a voluntary registration of works.
+      Such registration can serve as valuable prima facie evidence in legal disputes. Otherwise, we see that it is an almost universally accepted principle that the protection of authors rights stems automatically from the act of creation and does not depend on any formalities, such as registration or deposit of the work.
+    </p>
+    <p></p>
+    <p>
+      The whole idea of fixation is to enable protection for a fixed work. If a work is fixed in a tangible medium it acts as a boon for the author. As mentioned earlier it also acts as evidence in legal disputes. Fixation provides a definite starting time for the term of protection. Under current law, a work is protected from its moment of fixation, even if that work is never distributed to the public.
+    </p>
+    <p></p>
+    <p>
+      A work is considered to be fixed if and only if the work has been perceived, reproduced or otherwise communicated for a period of more that transitory duration. No matter to what extent a work may have been conceived, communicated, or performed before fixation, it does not acquire any legal status until it is concretized in some form, if only temporarily. A performance must also be fixed in some form for the copyright protection.
+    </p>
+    <p></p>
+    <p>
+      Acquisition of copyright is automatic and it does not require any formality. However, certificate of registration of copyright and the entries made therein serve as prima facie evidence in a court of law with reference to dispute relating to ownership of copyright. In general, registration is voluntary. Copyright exists from the moment the work is created.
+    </p>
+    <p></p>
+    <p>
+      Under Indian law, registration is not required either for acquiring copyright or for enforcing it in an infringement action. However, registration has evidentiary value in a court of law with reference to dispute relating to ownership of copyright. Under the copyright law, the creator of the original expression in a work is its author.
+      The author is also the owner of copyright, unless there is a written agreement by which the author assigns the copyright to another person or entity, such as a publisher. In cases of works made for hire, the provider of the work is considered to be the author. The duration granted for works of copyright varies depending on the type of work.
+    </p>
 
 
     
