--- a/Pages/copright.html
+++ b/Pages/copright.html
@@ -476,5 +476,137 @@
         According to Section 2(d)(ii) of the Copyright Act, the court determined that Manna Dey, as the vocalist, was not the song’s author. It was proven that Manna Dey wrote two songs, gave Defendant No. 1 the rights to them, and got paid royalties. The producer acquired copyright for the four songs since they were included in a cinematographic picture. The court dismissed claims for damages and rejected the Section 57 charge of distortion. The defendants, who possessed the original plate from which the record was manufactured, were found to be the rightful owners of the music rights, and the lawsuit was dismissed. 
     </p>
     <p></p>
+    <h3>Tips Industries v Wynk Music 23 April, 2019</h3>
+    <p></p>
+    <h4>FACT:</h4>
+    <p></p>
+    <p>
+        The powerhouse in the Indian music scene Tips Industries Ltd. squared up against Wynk Music Ltd. on one side of the courtroom in a musical battle of legal notes. The peak of this legal symphony came from a 2016 deal in which Tips kindly gave Wynk a golden ticket: permission to use its vast and varied music library.   
+    </p>
+    <p></p>
+    <p>
+        Nevertheless, attempts to reharmonize licensing terms hit a sour note when the song of negotiation continued over the expiration date of this harmonic agreement. The conflict got so bad that Wynk Music turned to Section 31D of the Copyright Act, which provides broadcasting companies in trouble with licensing with a legal safety net.
+    </p>
+    <p></p>
+    <h4>ISSUES:</h4>
+    <p></p>
+    <p>
+        1. Whether or not broadcasting organizations are discriminated against under Section 31D depending on the broadcast medium.
+        2. Whether the Intellectual Property Appellate Board’s (IPAB) authority is impacted by the legislative directives in Section 31D.
+        3. The importance of Section 31D(1)’s absence of qualification to “broadcast”.       
+    </p>
+    <p></p>
+    <h4>LAW:</h4>
+    <p></p>
+    <p>
+        1.	Section 2 (dd): 
+    <p></p>
+    <p>
+        “Broadcast” is defined in this section as “communication to the public by any means of wireless diffusion.” This definition is important to know in order to comprehend the range of statutory licences that are granted under Section 31D. 
+    </p>
+    <p></p>
+    <p>
+        2.	Section 2 (ff):  
+    </p>
+    <p></p>
+    <p>
+        In this section, “communication to the public” is defined as making any performance or work available for seeing or hearing, without regard to whether the public actually views, hears, or finds the work enjoyable. When it comes to defining public communication in the context of online broadcasting, this notion is essential.
+    </p>
+    <p></p>
+    <p>
+        3.	Section 31 D: 
+    </p>
+    <p></p>
+    <p>
+        Statutory licences for broadcasting organisations to disseminate works to the public are outlined in this section. It describes the requirements and steps involved in getting these licences. The main point of contention in the legal argument is how this clause and its subsections should be interpreted.  
+    </p>
+    <p></p>
+    <p>
+        4.	Copyright Rule, 2013:  
+    </p>
+    <p></p>
+    <p>
+        The text refers to Rules 29 and 31 of the Copyright Rules, 2013, and discusses how to interpret them in light of the parameters of statutory licenses under Section 31D.
+    </p>
+    <p></p>
+    <h4>JUDGEMENT:</h4>
+    <p></p>
+    <p>
+        Three things make the court’s view incorrect: there is no discrimination based on the medium of broadcast; legislative directives do not restrict the authority of IPAB; and Section 31D (1) does not define “broadcast” in a way that would indicate non-discrimination. The statutory licencing scheme's inclusion of online broadcasters is further supported by the draught Copyright (Amendment) Rules, 2019. The court’s ruling could have an impact on cases like Spotify that have comparable issues.
+    </p>
+    <p></p>
+    <h3>Yash Raj Films Pvt Ltd (Plaintiff) v. Sri Sai Ganesh Productions and Ors. (Defendants) CS (COMM) 1329/2016</h3>
+    <p></p>
+    <h4>FACT:</h4>
+    <p></p>
+    <p>
+        The Bollywood film “Band Baja Baarat,” which debuted in December 2010, was produced by Yash Raj Films Pvt. Ltd. (YRF), a well-known production firm. YRF asserted copyright over a number of the movie’s original components, including as the narrative, dialogue, theme, idea, plot, screenplay, soundtrack, songs, and character designs. By a notification dated May 2011, YRF officially declared its exclusive ownership of the copyrights to the movie. 
+    </p>
+    <p></p>
+    <p>
+        YRF discovered in December 2011 that one of the defendants, Sri Sai Ganesh Productions, planned to adapt “Band Baja Baarat” as “Jabardasth” in Telugu. In January and April of 2012, YRF addressed stop and desist letters to the defendants; they never replied. The defendants released the Telugu movie “Jabardasth” in February 2013 in defiance of YRF’s legal actions, allegedly stealing key elements from “Band Baja Baarat.”
+    </p>
+    <p></p>
+    <p>
+        The distributor and director of “Jabardasth,” Sri Sai Ganesh Productions, were sued by YRF for copyright infringement. On March 6, 2013, YRF was granted an ex-parte ad interim injunction, and Defendant No. 3 admitted that YRF was the rightful owner of the copyright in the storyline, screenplay, dialogue, and other components of “Band Baja Baarat.”
+    </p>
+    <p></p>
+    <h4>ISSUES:</h4>
+    <p></p>
+    <p>
+        1. If a cinematograph film’s copyright may survive without reference to the underlying works.
+        2. If creating digital copies of a film is included in the definition of “to make a copy of the film” under Section 14, as well as if the two films are significantly similar.
+        3. Does the Delhi High Court have the authority to hear this case?          
+    </p>
+    <p></p>
+    <h4>LAW:</h4>
+    <p></p>
+    <p>
+        1.	Section 13:
+    </p>
+    <p></p>
+    <p>
+        This section addresses works that are protected by copyright. It consists of audio recordings, cinematograph films, and original literary, dramatic, musical, and creative works.
+        According to the Act’s Sections 13(1)(b) and 13(3)(a), a cinematograph film cannot have copyright if a significant portion of it violates the copyright of another work.
+    </p>
+    <p></p>
+    <p>
+        2.	Section 14: 
+    </p>
+    <p></p>
+    <p>
+        This section describes the rights bestowed on the owner of a copyright, including the exclusive right to reproduce, issue copies, and perform the work. “To make a copy of the film” is a phrase found in Section 14 of the Act, which addresses the rights of the copyright owner.
+    </p>
+    <p></p>
+    <p>
+        3.	Section 51: 
+    </p>
+    <p></p>
+    <p>
+        The definition of copyright infringement is provided in this section. This includes producing copies of the work without the owner’s consent.
+    </p>
+    <p></p>
+    <p>
+        4.	Section 55: 
+    </p>
+    <p></p>
+    <p>
+        The rights to injunctions and damages are among the remedies for copyright infringement provided in this section.
+    </p>
+    <p></p>
+    <p>
+        5.	Section 62:
+    </p>
+    <p></p>
+    <p>
+        The provision gives the district court where the plaintiff resides or conducts business the authority to consider matters involving copyright infringement.
+    </p>
+    <p></p>
+    <h4>JUDGEMENT:</h4>
+    <p></p>
+    <p>
+        The court ruled that, as an independent work distinct from its underlying works, a cinematograph film is entitled to copyright protection. In the event that the movie does not violate any specific underlying works, it could not be considered “original,” therefore excluding it from copyright protection. Section 14’s definition of “to make a copy of the film” encompasses both tangible and intangible copies, as well as the duplication of concepts and ideas. The court concluded that there were significant similarities between the two films and that the defendants had openly copied “Band Baja Baarat’s” core elements. The defendants’ film was released in Delhi, even though it was not produced there, hence the Delhi High Court has jurisdiction over the case. 
+    </p>
+    <p></p>
 </body>
 </html>
