--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -58,5 +58,20 @@
 <p></p>
 <img src="./kfc.jpeg" class="kfc">
 <p>Image source: Creator: Brian Bohannon | Credit: AP</p>
-
+<p>
+<p></p>
+<p></p>
+<u2>
+  <li>Tiffany & Co was first established as a ‘stationery and fancy goods emporium’. It later emerged as a luxury jewellery brand with its headquarters and flagship store in New York city. The company is known for its diamond engagement rings.
+  <li>The company has a long history of creating custom jewellery for celebrities. Some of the most iconic pieces include the Tiffany Yellow Diamond, which was worn by Audrey Hepburn and popularised in the film “Breakfast at Tiffany’s” and the Hope Diamond which was owned by Louis XIV of France.
+  <li>Tiffany & Co is known for its distinctive and iconic “Tiffany blue colour”, often referred to as “Robins Egg Blue”. The colour has become synonymous with the luxury jewellery brand and is even trademarked for use on jewellery boxes and bags. The specific shade of Tiffany blue is referred to as Pantone 1837. </li>
+  <li>Tiffany & Co. holds a trademark for the specific shade of blue used on its packaging. This means that other companies are not allowed to use that exact specific shade of blue on their packaging to avoid confusion with the Tiffany brand.</li>
+  <li>The Tiffany blue colour is a distinctive and key element of the brand’s visual identity and is instantly recognizable. The use of this distinctive colour helps create a sense of luxury and exclusivity that is associated with Tiffany & Co’s products. 
+  <li>The company adopts minimalistic and elegant packaging with the Tiffany Blue box being an integral part of the brand’s experience. Their famous blue box is often associated with special occasions and gift-giving. The company also releases limited edition collections featuring the Tiffany blue colour in unique ways. 
+  <li>The Tiffany blue colour has had a significant cultural impact and has become a symbol of luxury. People around the world recognize the colour in connection with high-end jewellery.   
+    Colour can be trademarked for a brand’s product packaging and branding. However, it is not that simple. (To know more about how colour can be trademarked, read our article titled “ Beyond black and white: Can colour be trademarked? ”)</li>
+  </li>
+  </li>
+  </li>
+</u2>
 
