--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -68,6 +68,8 @@
   <li>The Tiffany blue colour has had a significant cultural impact and has become a symbol of luxury. People around the world recognize the colour in connection with high-end jewellery.   
     Colour can be trademarked for a brand’s product packaging and branding. However, it is not that simple. (To know more about how colour can be trademarked, read our article titled “ Beyond black and white: Can colour be trademarked? ”)</li>
   </li>
+  <img src="./tiffany.png" class="tiffany">
+  <p>Image source: Tiffany & Co.</p>
   </li>
   </li>
 </u2>
