--- a/Pages/PIR/PIR.html
+++ b/Pages/PIR/PIR.html
@@ -58,6 +58,7 @@
 <p>
 <p></p>
 <p></p>
+<h1>Tiffany & Co.</h1>
 <u2>
   <li>Tiffany & Co was first established as a ‘stationery and fancy goods emporium’. It later emerged as a luxury jewellery brand with its headquarters and flagship store in New York city. The company is known for its diamond engagement rings.
   <li>The company has a long history of creating custom jewellery for celebrities. Some of the most iconic pieces include the Tiffany Yellow Diamond, which was worn by Audrey Hepburn and popularised in the film “Breakfast at Tiffany’s” and the Hope Diamond which was owned by Louis XIV of France.
