--- a/Pages/Law Notes/Law Notes.html
+++ b/Pages/Law Notes/Law Notes.html
@@ -41,6 +41,7 @@
             <ul class="dropdown-menu">
               <li><a class="text-decoration-none" href="/Pages/copright.html">Copyright</a></li>
               <li><a class="text-decoration-none" href="/Pages/Trademark.html">Trademark</a></li>
+              <li><a class="text-decoration-none" href="/Pages/Patent.html">Patent</a></li>
             </ul>
           </div> 
           <li><a class="text-decoration-none" href="/Pages/PIR/PIR.html">Public Interest Reads(PIR)</a></li>
